# ChangeLog for dev-ruby/actionpack
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/actionpack/ChangeLog,v 1.69 2007/11/27 14:55:52 armin76 Exp $

  27 Nov 2007; Raúl Porcel <armin76@gentoo.org> actionpack-1.13.6.ebuild:
  ia64/sparc stable wrt security #200159

  27 Nov 2007; Brent Baude <ranger@gentoo.org> actionpack-1.13.6.ebuild:
  Marking actionpack-1.13.6 ppc64 for bug 200159

  26 Nov 2007; Brent Baude <ranger@gentoo.org> actionpack-1.13.6.ebuild:
  Marking actionpack-1.13.6 ppc for bug 200159

  26 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  actionpack-1.13.6.ebuild:
  stable x86, security bug 200159

*actionpack-1.13.6 (25 Nov 2007)

  25 Nov 2007; Hans de Graaff <graaff@gentoo.org> +actionpack-1.13.6.ebuild:
  Version bump for Rails 1.2.6, security bug #200159

  21 Oct 2007; Steve Dibb <beandog@gentoo.org> actionpack-1.13.5.ebuild:
  amd64 stable

  18 Oct 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  actionpack-1.13.5.ebuild:
  ppc stable, bug #195315

  16 Oct 2007; Raúl Porcel <armin76@gentoo.org> actionpack-1.13.5.ebuild:
  ia64/sparc stable wrt security #195315

  16 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  actionpack-1.13.5.ebuild:
  stable x86, security bug 195315

*actionpack-1.13.5 (13 Oct 2007)

  13 Oct 2007; Hans de Graaff <graaff@gentoo.org> +actionpack-1.13.5.ebuild:
  Version bump with security fixes, bug 195315

  13 Oct 2007; Tom Gall <tgall@gentoo.org>
  actionpack-1.13.4.ebuild, actionpack-1.13.3.ebuild:
  stable on ppc64, and added ~ppc64

  06 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  actionpack-1.13.3.ebuild:
  stable x86, bug 177209

  06 Oct 2007; Hans de Graaff <graaff@gentoo.org> -actionpack-1.13.1.ebuild,
  +actionpack-1.13.4.ebuild:
  Remove old version

*actionpack-1.13.4 (06 Oct 2007)

  06 Oct 2007; Hans de Graaff <graaff@gentoo.org> +actionpack-1.13.4.ebuild:
  Version bump for rails 1.2.4
