@@ -1,18 +1,0 @@
-# Copyright 1999-2007 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/actionpack/actionpack-1.13.4.ebuild,v 1.2 2007/10/13 05:31:46 tgall Exp $
-
-EAPI="prefix"
-
-inherit ruby gems
-
-DESCRIPTION="Eases web-request routing, handling, and response."
-HOMEPAGE="http://rubyforge.org/projects/actionpack/"
-
-LICENSE="MIT"
-SLOT="1.2"
-KEYWORDS="~amd64 ~ia64 ~ppc-macos ~x86 ~x86-macos ~x86-solaris"
-IUSE=""
-
-DEPEND=">=dev-lang/ruby-1.8.5
-	=dev-ruby/activesupport-1.4.3"
