@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/actionpack
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/actionpack/ChangeLog,v 1.69 2007/11/27 14:55:52 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/actionpack/ChangeLog,v 1.70 2007/12/01 09:02:42 graaff Exp $
+
+  01 Dec 2007; Hans de Graaff <graaff@gentoo.org> -actionpack-1.13.2.ebuild,
+  -actionpack-1.13.3.ebuild, -actionpack-1.13.4.ebuild:
+  Remove old vulnerable versions
 
   27 Nov 2007; Raúl Porcel <armin76@gentoo.org> actionpack-1.13.6.ebuild:
   ia64/sparc stable wrt security #200159
